Fixed image overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+html {
+  height: 100%;
+}
 
 #container {
   background-color: steelblue;
@@ -32,7 +35,8 @@
   min-height: 500px;
   overflow-wrap: break-word;
   border: 1px solid darkblue;
-
+  overflow: hidden;
+  max-width: fit-content;
 }
 
 #preview-title {
@@ -44,4 +48,8 @@
   text-align: left;
   padding-bottom: 0;
   padding-left: 25%;
+}
+
+img {
+
 }
